[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sign.gd" type="Script" id=1]
[ext_resource path="res://assets/signs/sign_0.png" type="Texture" id=2]
[ext_resource path="res://assets/signs/sign_1.png" type="Texture" id=3]
[ext_resource path="res://assets/signs/sign_2.png" type="Texture" id=4]
[ext_resource path="res://assets/signs/sign_3.png" type="Texture" id=5]
[ext_resource path="res://assets/signs/sign_4.png" type="Texture" id=6]
[ext_resource path="res://assets/signs/sign_5.png" type="Texture" id=7]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://8bitlimit/8bitlim.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = SubResource( 1 )

[node name="Sign" type="Node2D"]
script = ExtResource( 1 )

[node name="sign_0" type="Sprite" parent="."]
position = Vector2( 0, 32 )
texture = ExtResource( 2 )

[node name="sign_1" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 32 )
texture = ExtResource( 3 )

[node name="sign_2" type="Sprite" parent="."]
visible = false
position = Vector2( 2, 31 )
texture = ExtResource( 4 )

[node name="sign_3" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 32 )
texture = ExtResource( 5 )

[node name="sign_4" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 32 )
texture = ExtResource( 6 )

[node name="sign_5" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 32 )
texture = ExtResource( 7 )

[node name="Label" type="RichTextLabel" parent="."]
margin_left = -8.0
margin_top = -32.0
margin_right = 20.0
margin_bottom = 12.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "1"
scroll_active = false
